[package]
name = "neon-dom"
version = "0.1.0"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_dom"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
log = "0.4"
simple_logger = "1.0.1"
log-panics = { version = "2.0.0", features = ["with-backtrace"]}